--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_HOME_URL=http://localhost:3000/assets/remoteEntry.js
-   
+# VITE_HOME_URL=http://localhost:3000/assets/remoteEntry.js
+VITE_HOME_URL=https://products-home.vercel.app/assets/remoteEntry.js
